<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.darkyen</groupId>
    <artifactId>tproll</artifactId>
    <version>1.5.2</version>

    <name>tproll</name>
    <description>A lightweight SLF4J backend.</description>

    <properties>
        <java.version>1.8</java.version>
        <test.java.version>1.8</test.java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- When changing, update StaticLoggerBinder.REQUESTED_API_VERSION as well -->
        <slf4j.version>1.7.36</slf4j.version>
        <junit.version>4.13.2</junit.version>
    </properties>

    <dependencies>
        <!-- Logging API -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Nullability annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>20.1.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- Integrations -->
        <dependency>
            <groupId>com.esotericsoftware</groupId>
            <artifactId>minlog</artifactId>
            <version>1.3.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.vmlens</groupId>
            <artifactId>api</artifactId>
            <version>1.1.5</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <testSource>${test.java.version}</testSource>
                    <testTarget>${test.java.version}</testTarget>
                    <compilerArgs>
                        <arg>-Xlint</arg>
                        <arg>-g</arg>
                        <arg>-Xdiags:verbose</arg>
                        <arg>-Xdoclint:-missing</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>


            <plugin>
                <groupId>com.vmlens</groupId>
                <artifactId>interleave</artifactId>
                <version>1.1.5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <trace>
                        <method>com.darkyen.**</method>
                    </trace>
                    <argLine>
                            --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
